<resources>
    <string name="app_name">intermedio</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="telefono">Telefono</string>
    <string name="button_save">Guardar</string>
    <string name="btnactdat">Activity Datos</string>
    <string name="title">Android</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_datos">Datos</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="button_clagson">Clase a Gson</string>
    <string name="button_gsonclas">Gson a Clase</string>
    <string name="results">Resultado</string>

    <string name="botonllamada">Llamada</string>
    <string name="botonllamaall">Llama a Todos</string>

    <string name="rnombre">Nombre</string>
    <string name="remail">Email</string>
    <string name="Rtelefono">Telefono</string>
    <string name="rreporte">Reporte</string>
    <string name="butenviar">Enviar Reporte</string>
    <string name="txtlocation">GPS</string>
</resources>
