<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MisDatos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre" />

        <EditText
            android:id="@+id/nombre_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/nombre"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/label2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correo" />

        <EditText
            android:id="@+id/correo_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/correo"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textPersonName"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefono" />

        <EditText
            android:id="@+id/telefono_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/telefono"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="guardarDatos"
            android:text="@string/button_save" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>